[fix] 배열이 두개 일 경우 -를 제대로 인식하지 못하는 경우 수정